static/css/styles.css
/* ... */
#journal-wrapper {
  height: 420px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
  background-color: #fffdf9e9;
}

#journal-wrapper::-webkit-scrollbar {
  display: none;
}

#milestone-bar-wrapper {
  height: 420px;
  background-color: #fffdf9e9;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#milestone-bar-wrapper::-webkit-scrollbar {
  display: none;
}

.milestone {
  background-color: #fffdf9e9!important;
}

.milestone-text {
  display: inline-block;
}

#milestone-form-container {
  width: 60%;
  min-width: 310;
  max-width: 450px;
  background-color: #fffdf9e9;
}

#trends-wrapper {
  height: 493px;
  background-color: #fffdf9e9;
}

/******** POST ********/

#post-wrapper {
  position: relative;
}

.card-link:hover {
  cursor: pointer;
  visibility: visible;
  color: #37a9c9;
  font-weight: 500;
  transform: translate(0, -1px);
}



/******** CONFIRM POST ********/

.delete-container {
  position: absolute;
  top: 14%;
  left: 0;
  height: 80px;
  background-color: #fef0dfe6;
  z-index: 10;
}

/******** CONFIRM MILESTONE ********/

.milestone .delete-container {
  width: 70%;
  left: 14%;
}

.emotion {
  font-size: 1.2em !important;
  font-weight: 900;
  text-shadow: 1px 1px 5px #ffffff !important;
}

/* *******ENTRY******* */

#entry-get-flow, #entry-content {
  width: 80%;
  min-width: 355px;
  max-width: 600px;
  background-color: #fffdf9e9;
}

.guided-label {
  margin: 8px auto;
  font-weight: bolder;
  font-size: 1.1em;
}

.solo-label {
  margin: 10px auto;
  font-size: 1.3em;
}

  /******** MEDIA QUERIES ********/

  @media (min-width: 991px) {
    #about-container {
      width: 90%;
    }
  }

  @media (max-width: 715px) {
    #msg-center {
      width: 90%;
    }

    #feelings-form {
      width: 77%;
    }
  }

@media (max-width: 767px) {
  #app-container {
    height:100%;
    width: 102%;
    padding-right: 2%;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
  }

  #app-container::-webkit-scrollbar {
    display: none;
  }

  #msg-center {
    width: 65%;
  }

  #feelings-form {
    width: 67%;
  }

  #feelings-wrapper {
    margin-top: 1rem;
  }

  #hub-wrapper {
    width: 70%;
   }

   #quote-wrapper {
    width: 65%;
   }
}

  #app-container::-webkit-scrollbar {
    display: none;
  }

@media (max-width: 680px) {
  #signup-wrapper {
    height: 560px;
    width: 97%;
  }
}

@media (max-width: 578px) {
  #entry-container {
    min-width: 350px;
  }
}


@media (max-width: 400px) {
  #msg-center, #feelings-wrapper, #quote-wrapper, #hub-wrapper {
    width: 90%;
  }
}

@media (max-height: 715px) {
  #app-container {
    height:100%;
    width: 102%;
    padding-right: 2%;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
}

/******** COLORS ********/

/* .happy {
  color: #ec8900 !important;
}

.anticipation {
  color: #f86877 !important;
}

.surprised {
  color: #ebb800 !important;
}

.bad {
  color: #0486ff !important;
}

.fearful {
  color: #a765d3 !important;
}

.angry {
  color: #ea604e !important;
}

.disgust {
  color: #00cb51 !important;
}

.sad{
   color: #00b6e3 !important;
} */
 /* happy: "#ffd07380",
  anticipation: "#ffb6bd7e",
  surprised: "#fffa947e",
  bad: "#44a5ff78",
  fearful: "#cda7e781",
  angry: "#ed6b5a7e",
  disgust: "#96e7b680",
  sad: "#85d5e97b" */

